fix hom page spacing

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -23,3 +23,21 @@
   margin-bottom: -150px;
   mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
   }
+  
+  .home-row1{
+    margin-top: 20%;
+    display: flex;
+    z-index: 1;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+  
+  .home-row{
+    display: flex;
+    z-index: 1;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+  
